feat(PhotosEndpoint): first files for photos but broken
